@@ -18,6 +18,8 @@
 
 #include "config.h"
 
+#include <string.h>
+
 #include <glib-object.h>
 
 #include "libgimpmath/gimpmath.h"
@@ -105,16 +107,7 @@ gimp_curve_map_pixels (GimpCurve *curve_colors,
                                      curve_alpha))
     {
     case CURVE_NONE:
-      while (samples--)
-        {
-          dest[0] = src[0];
-          dest[1] = src[1];
-          dest[2] = src[2];
-          dest[3] = src[3];
-
-          src  += 4;
-          dest += 4;
-        }
+      memcpy (dest, src, 4 * sizeof (gfloat));
       break;
 
     case CURVE_COLORS:
