@@ -1,5 +1,10 @@
 2008-05-13  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpcurve-map.c (gimp_curve_map_pixels): use memcpy()
+	for the CURVE_NONE case.
+
+2008-05-13  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpcurve-map.[ch] (gimp_curve_map_pixels): introduced
 	an enum to clean up the code. Optimize another not so uncommon case.
 
